GNOME Bugzilla – Bug 697302
Spelling mistake: "You need to setup an account..."
Last modified: 2013-08-22 09:05:23 UTC
Created attachment 240681 [details] Screenshot showing empathy with spelling mistake "You need to setup an account to see contacts here" should be "You need to set up an account to see contacts here". 'Set up' is the verb phrase and 'setup' is the noun. I found the string in git master in /src/empathy-roster-window.c on line 478, although it may exist elsewhere too. This has already been reported in a bug on launchpad: https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/1043740
Created attachment 241974 [details] [review] Patch: fixed gramatical error: string now reads "You need to set up an ..." I could find this string only in src/empathy-roster-window.c
Merged to master; thanks!
*** Bug 706538 has been marked as a duplicate of this bug. ***