fixed grammatical error: setup -> set up could find this error only in src/empathy-roster-window.c changed from "You need to setup an ..." to "You need to set up an ..." as suggested.

https://bugzilla.gnome.org/show_bug.cgi?id=697302